--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -68,9 +68,11 @@
   </div>
   <div class="row">
     <div class="col-3 offset-5">
-     <button type="button" class="btn btn-success">
-        <%= link_to "情報入力に進む", new_public_order_path,class:"text-light" %>
-     </button>
+      <% if @cart_items== nil? %>
+        <p>カートが空です</p>
+      <% else %>
+        <%= link_to "情報入力に進む", new_public_order_path,class:"btn btn-success" %>
+      <% end %>
     </div>
     
   </div>
